src/main/webapp/imcms/css/admin/imcms-super-admin.css
@import url("../imcms-info-page.css");

* {
    font-family: 'Source Sans Pro', sans-serif;
}

.imcms-info-page {
    position: absolute;
    margin: 0;
    left: 15%;
    width: 70%;
    top: 2%;
}

@media screen and (max-width: 1600px) {
    .imcms-info-page {
        left: 12%;
        width: 76%;
    }
}

@media screen and (max-width: 1400px) {
    .imcms-info-page {
        left: 7%;
        width: 86%;
    }
}

@media screen and (max-width: 1200px) {
    .imcms-info-page {
        left: 1%;
        width: 98%;
    }
}

.imcms-head__exit {
    position: absolute;
    top: 13px;
    right: 20px;
}

.imcms-pop-up-modal {
    height: 905px;
}

.category-admin .imcms-buttons,
.roles-editor .imcms-buttons,
.rules-editor .imcms-buttons,
.group-editor .imcms-buttons,
.profiles-editor .imcms-buttons {
    display: flex;
    justify-content: flex-end;
}

.category-admin .imcms-buttons *:nth-child(2),
.roles-editor__role-view-buttons *:nth-child(2),
.group-editor__default-buttons *:nth-child(2) {
    margin-left: auto;
}

.imcms-search-row > * {
    width: 25%;
    display: inline-block;
    padding: 0 10px 0;
}

.imcms-search-row > :first-child {
    padding-left: 0;
}

.imcms-pop-up-modal__right-side {
    width: 80%;
    padding: 30px 60px;
    height: 95%;
}

.imcms-search-row {
    display: flex;
    align-items: flex-end;
}

.imcms-search-row__users-list-button .imcms-button {
    float: none;
    white-space: nowrap;
}

.imcms-search-row__users-activity-filter label {
    margin: 0;
}

.imcms-search-row__users-activity-filter {
    margin-top: 38px!important;
    margin-bottom: auto!important;
}

.imcms-form__field .imcms-user-title-row.imcms-title {
    margin-bottom: 0;
}

.imcms-user-info-row,
.imcms-user-title-row {
    padding: 2px;
    border-bottom: solid 1px #dad5d5;
}

.imcms-user-info-row__user-id,
.imcms-user-info-row__last-name,
.imcms-user-info-row__first-name,
.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-id,
.imcms-user-title-row__last-name,
.imcms-user-title-row__first-name,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    padding: 5px;
}

.imcms-user-info-row .imcms-control {
    margin: 5px;
}

.imcms-user-info-row__user-id,
.imcms-user-title-row__user-id {
    width: 5%;
}

.imcms-user-info-row__first-name,
.imcms-user-title-row__first-name {
    width: 13%;
}

.imcms-user-info-row__last-name,
.imcms-user-title-row__last-name {
    width: 18%;
}

.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    width: 27%;
}

.imcms-user-info-row > *,
.imcms-user-title-row > * {
    display: inline-block;
}

.imcms-user-info-row__archive {
    background-size: contain;
    width: 21px;
    height: 21px;
    font-size: 14px;
}

.imcms-users-search-result {
    height: 600px;
    overflow-y: auto;
    background-color: #ececec;
    border: solid 1px #d1d2c6;
}

.imcms-pop-up-modal__left-side {
    max-width: none;
    width: 20%;
}

.imcms-user-info-row--archived {
    background-color: lightgray;
}

.imcms-drop-down-list__item .imcms-label {
    margin-bottom: 0;
}

.roles-table {
    width: 40%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-block;
}

.roles-table__role-row {
    padding: 5px;
    cursor: pointer;
}

.roles-table__role-row:hover {
    background-color: #dfedff;
}

.roles-table__role-row.roles-table__role-row--active {
    background-color: #c3d9f5;
}

.roles-editor {
    width: 50%;
    margin-left: 2%;
    vertical-align: top;
}

.versions-container {
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-flex;
    width: 80%;
}

.data-versions__imcms-version,
.data-versions__java-version,
.data-versions__server-info,
.data-versions__db-version,
.data-versions__db-name-version {
    margin: 10px;
    font-size: 18px;
}

.files-table {
    width: 100%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-flex;
    justify-content: space-between;
}

.files-table * {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.templates-table {
    width: 100%;
    display: inline-flex;
    height: 400px;
}

.files-table > *,
.templates-table > * {
    width: 50%;
}

.group-editor > *:not(.group-editor__create-button) {
    width: 98%;
}

.group-editor__create-button {
    margin-bottom: 10px;
}

.group-editor .imcms-select__drop-down-list,
.group-editor .imcms-text-box__input {
    width: 100%;
}

.templates-data,
.documents-data {
    overflow-y: auto;
    border: 1px solid gainsboro;
}

.templates-data {
    height: 140px;
}

.documents-data {
    height: 400px;
}

.doc-info-row,
.template-info-row {
    display: flex;
    padding: 5px;
    cursor: pointer;
}

.title-doc-row {
    display: flex;
    font-weight: 600;
    margin-bottom: 10px;
    padding: 5px;
}

.group-editor__templates-data-title {
    margin: 10px 0;
}

.table-documents__loading-animation {
    margin: 0 50%;
}

.templates-radios-container {
    padding: 5px 10px;
}

.text-preview {
    padding: 0;
}

.text-preview textarea {
    width: 100%;
    height: 100%;
}

.first-sub-files,
.second-sub-files {
    height: 200px;
    overflow-y: auto;
    border: 1px solid gainsboro;
    justify-content: space-between;
}

.first-sub-files,
.second-sub-files {
    background-color: #dcdada;
}

.file-row,
.directory-row,
.root-directory-row,
.path-row {
    padding: 5px;
    cursor: pointer;
    display: flex;
}

.path-row {
    background-color: #ffffe0;
}

.files-table__directory-row--selected,
.files-table__root-directory-row--selected {
    background-color: #FFCC99;
}

.file-row:hover,
.directory-row:hover,
.doc-info-row:hover,
.root-directory-row:hover,
.template-info-row:hover {
    background-color: #dfedff;
}
/* ... */

